--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+        <h2>
+            Hello world!
+        </h2>
+    </head>
+    <body>
+        <p>
+            This will be my personal webpage
+        </p>
+    </body>
+</html>
