--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="webpage">
     <div class="container-fluid">
-        <h1>Coursework</h1>
+        <h1>Contact Information</h1>
     </div>
 </html>
