--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </head>
     <body>
         <div class="container-fluid">
-            <div class="row">
+            <div class="container-fluid">
                 <div ng-view></div>
             </div>
         </div>
