--- a/pages/coursework.html
+++ b/pages/coursework.html
@@ -3,4 +3,30 @@
     <div class="container-fluid">
         <h1>Coursework</h1>
     </div>
+    <div class="container-fluid">
+        <h3>Masters coursework</h3>
+        <h4>September 2014 - December 2015</h4>
+        <ul>
+            <li>Bioinformatics Programmming</li>
+            <li>Bioinformatics Computational Methods I and II</li>
+            <li>Bioinformatics Seminar</li>
+            <li>Biochemistry</li>
+            <li>Ethics in Biological Research</li>
+            <li>Web Development</li>
+            <li>Collecting, Storing, and Retrieving Data</li>
+        </ul>
+    </div>
+    <div class="container-fluid">
+        <h3>Undergraduate coursework</h3>
+        <h4>September 2014 - December 2015</h4>
+        <ul>
+            <li>Bioinformatics Programmming</li>
+            <li>Bioinformatics Computational Methods I and II</li>
+            <li>Bioinformatics Seminar</li>
+            <li>Biochemistry</li>
+            <li>Ethics in Biological Research</li>
+            <li>Web Development</li>
+            <li>Collecting, Storing, and Retrieving Data</li>
+        </ul>
+    </div>
 </html>
