--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
     </head>
     <body>
         <div class="container-fluid">
-            <div class="container-fluid">
-                <div ng-view></div>
+            <div class="row">
+                <div class="col-lg-10">
+                    <div ng-view></div>
+                </div>
             </div>
         </div>
     </body>
