--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="webpage">
-    <div class="container-fluid">
-        <h1>Resume</h1>
+<html lang="en">
+<div class="container-fluid">
+    <div class="row">
+			<div class="col-sm-10">
+				<h2>Resume</h2>
+                <h2>Updated: December 2014</h2>
     </div>
 </html>
