--- a/pages/coursework.html
+++ b/pages/coursework.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <div class="container-fluid">
     <div class="row">
+        <div class="container-fluid">
 			<div class="col-sm-10">
 				<h2>Coursework</h2>
             </div>
@@ -26,5 +27,6 @@
                     <li></li>
                 </ul>
             </div>
+        </div>
     </div>
 </html>
