--- a/index.html
+++ b/index.html
@@ -19,40 +19,12 @@
         <script src="./app.js"></script>
         <script src="./config.js"></script>
         
-        <div class="container-fluid">
-            <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
-                <div class="container-fluid">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                        <a class="navbar-brand page-scroll" href="#page-top">Anthony Classon</a>
-                    </div>
-
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li>
-                                <a class="page-scroll" href="#/about">About</a>
-                            </li>
-                            <li>
-                                <a class="page-scroll" href="#/coursework">Coursework</a>
-                            </li>
-                            <li>
-                                <a class="page-scroll" href="#/resume">Resume</a>
-                            </li>
-                            <li>
-                                <a class="page-scroll" href="#/contact">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!-- /.navbar-collapse -->
-                </div>
-                <!-- /.container-fluid -->
-            </nav>
-        </div>
-        
     </head>
     <body>
         <div class="container-fluid">
+            <div class="row">
+                    <div ng-include="'./pages/header.html'"></div>
+            </div>
             <div class="row">
                 <div class="col-lg-10">
                     <div ng-view></div>
