--- a/pages/resume.html
+++ b/pages/resume.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <div class="container-fluid">
     <div class="row">
-			<div class="col-sm-10">
+			<div>
 				<h2>Resume</h2>
-                <h2>Updated: December 2014</h2>
+                <h4>Updated: December 2014</h4>
+            </div>
     </div>
 </html>
