--- a/pages/resume.html
+++ b/pages/resume.html
@@ -6,5 +6,14 @@
 				<h2>Resume</h2>
                 <h4>Updated: December 2014</h4>
             </div>
+            <div>
+                <h3>Education</h3>
+            </div>
+            <div>
+                <h3>Experience</h3>
+            </div>
+            <div>
+                <h3>Volunteering and Community Involvement</h3>
+            </div>
     </div>
 </html>
