--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,4 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="webpage">
-        <h1>Contact Information</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <h1>Contact Information</h1>
+        </div>
+        <div class="container-fluid">
+            <h3>Email</h3>
+            <h4>anthony.classon@gmail.com</h4>
+            <h4>classon.a@husky.neu.edu</h4>
+        </div>
+    </div>
 </html>
