--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div ng-include="'./pages/header.html'"></div>
             </div>
             <div class="row">
-                <div class="col-lg-10">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
                     <div ng-view></div>
                 </div>
             </div>
