--- a/pages/coursework.html
+++ b/pages/coursework.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <div class="container-fluid">
     <div class="row">
-            <div class="container-fluid">
+            <div class="section">
                 <h3>Masters coursework</h3>
                 <h4>September 2014 - December 2015</h4>
                 <h5>M.S. Bioinformatics</h5>
@@ -16,7 +16,7 @@
                     <li>Collecting, Storing, and Retrieving Data</li>
                 </ul>
             </div>
-            <div class="container-fluid">
+            <div class="section">
                 <h3>Undergraduate coursework</h3>
                 <h4>September 2010 - May 2014</h4>
                 <h5>B.A. Biology, Mathematics and Statistics</h5>
