--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
             <div class="row">
                     <div ng-include="'./pages/header.html'"></div>
             </div>
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <div ng-view></div>
-                </div>
+            <div ng-view class="row">
             </div>
         </div>
     </body>
