--- a/pages/resume.html
+++ b/pages/resume.html
@@ -3,16 +3,15 @@
 <div class="container-fluid">
     <div class="row">
 			<div>
-				<h2>Resume</h2>
                 <h4>Updated: December 2014</h4>
             </div>
-            <div>
+            <div class="section">
                 <h3>Education</h3>
             </div>
-            <div>
+            <div class="section">
                 <h3>Experience</h3>
             </div>
-            <div>
+            <div class="section">
                 <h3>Volunteering and Community Involvement</h3>
             </div>
     </div>
