--- a/pages/coursework.html
+++ b/pages/coursework.html
@@ -1,47 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<div class="container-fluid">
-    <div class="row">
-            <div class="section">
-                <h3>Masters coursework</h3>
-                <h4>September 2014 - December 2015</h4>
-                <h5>M.S. Bioinformatics</h5>
-                <ul>
-                    <li>Bioinformatics Programmming</li>
-                    <li>Bioinformatics Computational Methods I and II</li>
-                    <li>Bioinformatics Seminar</li>
-                    <li>Biochemistry</li>
-                    <li>Ethics in Biological Research</li>
-                    <li>Web Development</li>
-                    <li>Collecting, Storing, and Retrieving Data</li>
-                </ul>
-            </div>
-            <div class="section">
-                <h3>Undergraduate coursework</h3>
-                <h4>September 2010 - May 2014</h4>
-                <h5>B.A. Biology, Mathematics and Statistics</h5>
-                <ul>
-                    <li>Calculus I-V</li>
-                    <p>Five semesters of calculus including multivariate analysis, differential equations, and advanced analysis. 
-                    </p>
-                    <li>Applied Statistics I and II</li>
-                    <p>Elementary treatment of probability densities, means, variances, correlation, independence, the binomial distribution, the central limit theorem. Stresses understanding and theoretical manipulation of statistical concepts. Inference about proportions, goodness of fit, student's t-distribution, tests for normality; two-sample comparisons, regression and correlation, tests for linearity and outliers, residual analysis, contingency tables, analysis of variance.
-                    </p>
-                    <li>Probability</li>
-                    <p>Basic probability, conditional probability, independence. Discrete and continuous random variables, mean and variance, functions of random variables, moment generating function. Jointly distributed random variables, conditional distributions, independent random variables. Methods of transformations, law of large numbers, central limit theorem.</p>
-                    <li>Mathematical Statistics</li>
-                    <p>Point estimation including unbiasedness, efficiency, consistency, sufficiency, minimum variance unbiased estimator, Rao-Blackwell theorem, and Rao-Cramer inequality. Maximum likelihood and method of moment estimations; interval estimation; tests of hypothesis, uniformly most powerful tests, uniformly most powerful unbiased tests, likelihood ratio test, and chi-square test.</p>
-                    <li>Organic Chemistry I and II</li>
-                    <li>General Chemistry I and II</li>
-                    <li>Physics I and II</li>
-                    <li>Animal Behavior</li>
-                    <p>Ethological approach to animal behavior; physiological, ontogenic, and phylogenic causes; and adaptive significance of behavior examined within an evolutionary framework, minimally including humans.
-                    </p>
-                    <li>Ecology</li>
-                    <li>Biochemistry</li>
-                    <li>Systems Physiology</li>
-                    <li>Cellular Biology</li>
-                </ul>
-            </div>
+    <div class="section">
+        <h3>Masters coursework</h3>
+        <h4>September 2014 - December 2015</h4>
+        <h5>M.S. Bioinformatics</h5>
+        <ul>
+            <li>Bioinformatics Programmming</li>
+            <li>Bioinformatics Computational Methods I and II</li>
+            <li>Bioinformatics Seminar</li>
+            <li>Biochemistry</li>
+            <li>Ethics in Biological Research</li>
+            <li>Web Development</li>
+            <li>Collecting, Storing, and Retrieving Data</li>
+        </ul>
     </div>
+    <div class="section">
+        <h3>Undergraduate coursework</h3>
+        <h4>September 2010 - May 2014</h4>
+        <h5>B.A. Biology, Mathematics and Statistics</h5>
+        <ul>
+            <li>Calculus I-V</li>
+            <p>Five semesters of calculus including multivariate analysis, differential equations, and advanced analysis. 
+            </p>
+            <li>Applied Statistics I and II</li>
+            <p>Elementary treatment of probability densities, means, variances, correlation, independence, the binomial distribution, the central limit theorem. Stresses understanding and theoretical manipulation of statistical concepts. Inference about proportions, goodness of fit, student's t-distribution, tests for normality; two-sample comparisons, regression and correlation, tests for linearity and outliers, residual analysis, contingency tables, analysis of variance.
+            </p>
+            <li>Probability</li>
+            <p>Basic probability, conditional probability, independence. Discrete and continuous random variables, mean and variance, functions of random variables, moment generating function. Jointly distributed random variables, conditional distributions, independent random variables. Methods of transformations, law of large numbers, central limit theorem.</p>
+            <li>Mathematical Statistics</li>
+            <p>Point estimation including unbiasedness, efficiency, consistency, sufficiency, minimum variance unbiased estimator, Rao-Blackwell theorem, and Rao-Cramer inequality. Maximum likelihood and method of moment estimations; interval estimation; tests of hypothesis, uniformly most powerful tests, uniformly most powerful unbiased tests, likelihood ratio test, and chi-square test.</p>
+            <li>Organic Chemistry I and II</li>
+            <li>General Chemistry I and II</li>
+            <li>Physics I and II</li>
+            <li>Animal Behavior</li>
+            <p>Ethological approach to animal behavior; physiological, ontogenic, and phylogenic causes; and adaptive significance of behavior examined within an evolutionary framework, minimally including humans.
+            </p>
+            <li>Ecology</li>
+            <p>Investigation of ecological processes and patterns at the individual, population, and community level. An evolutionary approach is emphasized.
+            </p>
+            <li>Biochemistry</li>
+            <li>Systems Physiology</li>
+            <p>An introduction to physiological principles applied across all levels of organization (cell, tissue, organ system). Preparation for more advanced courses in physiology. Topics include homeostasis and neural, muscle, respiratory, cardiovascular, renal, endocrine, gastrointestinal, and metabolic physiology.
+            </p>
+            <li>Cellular Biology</li>
+            <p>Principles of cellular organization and function: biological molecules, flow of genetic information, membranes and subcellular organelles, and cell regulation.
+            </p>
+        </ul>
 </html>
