--- a/pages/resume.html
+++ b/pages/resume.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <div class="container-fluid">
     <div class="row">
-			<div>
+			<div class="offset3">
                 <h4>Updated: December 2014</h4>
             </div>
-            <div class="section">
+            <div class="offset3">
                 <h3>Education</h3>
             </div>
-            <div class="section">
+            <div class="offset3">
                 <h3>Experience</h3>
             </div>
-            <div class="section">
+            <div class="offset3">
                 <h3>Volunteering and Community Involvement</h3>
             </div>
     </div>
