--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
     <body>
         <div class="container-fluid">
                 <div ng-include="'./pages/header.html'"></div>
-            <div ng-view class="row">
-            </div>
+                <div class="row">
+                    <div ng-view></div>
+                </div>
         </div>
     </body>
 </html>
