--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <div class="container-fluid">
                 <div ng-include="'./pages/header.html'"></div>
                 <div class="row">
-                    <div ng-view></div>
+                    <div class="col-lg-11">
+                            <div ng-view></div>
+                    </div>
                 </div>
         </div>
     </body>
