--- a/pages/home.html
+++ b/pages/home.html
@@ -4,5 +4,14 @@
         <div class="col-sm-10">
             <p>Hello and welcome to my homepage. My name is Anthony Classon and I am currently a masters student at Northeastern University in Boston, MA.</p>
         </div>
+        <div class="col-sm-10">
+            <p>Hello and welcome to my homepage. My name is Anthony Classon and I am currently a masters student at Northeastern University in Boston, MA.</p>
+        </div>
+        <div class="col-sm-10">
+            <p>Hello and welcome to my homepage. My name is Anthony Classon and I am currently a masters student at Northeastern University in Boston, MA.</p>
+        </div>
+        <div class="col-sm-10">
+            <p>Hello and welcome to my homepage. My name is Anthony Classon and I am currently a masters student at Northeastern University in Boston, MA.</p>
+        </div>
     </div>
 </html>
