--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,10 +2,17 @@
 <html lang="en" ng-app="webpage">
     <div class="container-fluid">
         <div class="row">
+            <div class="row-fluid">
+                <div class="col-sm-10">
+                    
+                    
+                </div>
+            </div>
             <div class="container-fluid">
-                <h3>Email</h3>
-                <h4>anthony.classon@gmail.com</h4>
-                <h4>classon.a@husky.neu.edu</h4>
+                <h3>Email:</h3>
+                <h4>anthony.classon@gmail.com
+                    classon.a@husky.neu.edu
+                </h4>
             </div>
         </div>
     </div>
