--- a/pages/coursework.html
+++ b/pages/coursework.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <div class="container-fluid">
-        <div class="row">
+        <div class="row-fluid">
+            <div class="col-sm-10">
+                
+                
+            </div>
+        </div>
+        <div class="row-fluid">
             <div class="col-sm-10">
                 <h3>Masters coursework</h3>
                 <h4>September 2014 - December 2015</h4>
                 <h5>M.S. Bioinformatics</h5>
                 <ul>
                     <li>Bioinformatics Programmming</li>
+                    <p>Surveys programming techniques using examples and exercises from bioinformatics. Python is the main programming language used, and the course ends with a brief introduction to Perl. Topics include string operations, file manipulations, regular expressions, object-oriented programming, database access, and an introduction to the BioPython/BioPerl libraries. 
+                    </p>
                     <li>Bioinformatics Computational Methods I and II</li>
                     <li>Bioinformatics Seminar</li>
+                    <li>Statistics for Bioinformatics</li>
+                    <p>Introduces the concepts of probability and statistics and the statistical concepts used in genomics (sequence alignment algorithms, mapping gene, and protein stochastic networks) and in drug discovery and evaluation. Methods include theoretical approaches such as maximum likelihood, entropy maximization, minimal description length, and empirical methods based on clustering, pattern recognition, bootstrapping, neural networks, Markov chain Monte Carlo, fitting Markov models of local interactions, and Bayesian models. Discusses application examples of discriminant analysis, principal components, multiple correlation, regression, and design of experiments to bioinformatics.
+                    </p>
                     <li>Biochemistry</li>
                     <li>Ethics in Biological Research</li>
+                    <p>Discusses ethical issues relevant to research in the biological sciences.
+                    </p>
                     <li>Web Development</li>
                     <li>Collecting, Storing, and Retrieving Data</li>
                 </ul>
             </div>
         </div>
-        <div class="row">
+        <div class="row-fluid">
             <div class="col-sm-10">
                 <h3>Undergraduate coursework</h3>
                 <h4>September 2010 - May 2014</h4>
@@ -32,7 +45,8 @@
                     <li>Probability</li>
                     <p>Basic probability, conditional probability, independence. Discrete and continuous random variables, mean and variance, functions of random variables, moment generating function. Jointly distributed random variables, conditional distributions, independent random variables. Methods of transformations, law of large numbers, central limit theorem.</p>
                     <li>Mathematical Statistics</li>
-                    <p>Point estimation including unbiasedness, efficiency, consistency, sufficiency, minimum variance unbiased estimator, Rao-Blackwell theorem, and Rao-Cramer inequality. Maximum likelihood and method of moment estimations; interval estimation; tests of hypothesis, uniformly most powerful tests, uniformly most powerful unbiased tests, likelihood ratio test, and chi-square test.</p>
+                    <p>Point estimation including unbiasedness, efficiency, consistency, sufficiency, minimum variance unbiased estimator, Rao-Blackwell theorem, and Rao-Cramer inequality. Maximum likelihood and method of moment estimations; interval estimation; tests of hypothesis, uniformly most powerful tests, uniformly most powerful unbiased tests, likelihood ratio test, and chi-square test.
+                    </p>
                     <li>Organic Chemistry I and II</li>
                     <li>General Chemistry I and II</li>
                     <li>Physics I and II</li>
