--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,16 +3,12 @@
     <div class="container-fluid">
         <div class="row">
             <div class="row-fluid">
-                <div class="col-sm-10">
-                    
-                    
+                <div class="col-md-3 col-md-offset-3">
+                    <h3>Email:</h3>
+                    <h4>anthony.classon@gmail.com
+                        classon.a@husky.neu.edu
+                    </h4>
                 </div>
-            </div>
-            <div class="container-fluid">
-                <h3>Email:</h3>
-                <h4>anthony.classon@gmail.com
-                    classon.a@husky.neu.edu
-                </h4>
             </div>
         </div>
     </div>
