--- a/pages/coursework.html
+++ b/pages/coursework.html
@@ -2,13 +2,7 @@
 <html lang="en">
 <div class="container-fluid">
         <div class="row-fluid">
-            <div class="col-sm-10">
-                
-                
-            </div>
-        </div>
-        <div class="row-fluid">
-            <div class="col-sm-10">
+            <div class="col-md-3 col-md-offset-3">
                 <h3>Masters coursework</h3>
                 <h4>September 2014 - December 2015</h4>
                 <h5>M.S. Bioinformatics</h5>
@@ -31,7 +25,7 @@
             </div>
         </div>
         <div class="row-fluid">
-            <div class="col-sm-10">
+            <div class="col-md-3 col-md-offset-3">
                 <h3>Undergraduate coursework</h3>
                 <h4>September 2010 - May 2014</h4>
                 <h5>B.A. Biology, Mathematics and Statistics</h5>
