--- a/pages/about.html
+++ b/pages/about.html
@@ -1,7 +1,10 @@
-<!DOCTYPE html>
-<html lang="en" ng-app="webpage">
-    <div class="container-fluid">
-        <h1>About</h1>
-        <p>Hello and welcome to my homepage. My name is Anthony Classon and I am currently a masters student at Northeastern University in Boston, MA.</p>
+<section class="bg-primary" id="about">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <hr class="light">
+                <p>Hello and welcome to my homepage. My name is Anthony Classon and I am currently a masters student at Northeastern University in Boston, MA.</p>
+            </div>
+        </div>
     </div>
-</html>
+</section>
