--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html lang="en" ng-app="webpage">
-    <div class="container-fluid">
+<section class="bg-primary" id="contact">
+    <div class="container">
         <div class="row">
-            <div class="row-fluid">
-                <div class="col-md-3 col-md-offset-3">
-                    <h3>Email:</h3>
-                    <h4>anthony.classon@gmail.com
-                        classon.a@husky.neu.edu
-                    </h4>
-                </div>
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <hr class="light">
+                <h3>Email:</h3>
+                <h4>anthony.classon@gmail.com
+                    classon.a@husky.neu.edu
+                </h4>
             </div>
         </div>
     </div>
-</html>
+</section>
