--- a/index.html
+++ b/index.html
@@ -22,13 +22,8 @@
     </head>
     <body>
         <div class="container-fluid">
-            <div class="row">
-                <div ng-include="'./pages/header.html'"></div>
-            </div>
-            <div class="row">
-                <div class="col-lg-10">
-                        <div ng-view></div>
-                </div>
+            <div ng-include="'./pages/header.html'">
+                <div class="row" ng-view></div>
             </div>
         </div>
     </body>
