--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,8 +1,7 @@
-<section class="bg-primary" id="contact">
+<section id="contact">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
-                <hr class="light">
+            <div class="col-lg-8 col-lg-offset-2">
                 <h3>Email:</h3>
                 <h4>anthony.classon@gmail.com
                     classon.a@husky.neu.edu
