--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <body>
         <div class="container-fluid">
             <div ng-include="'./pages/header.html'">
-                <div class="row" ng-view></div>
+                <div ng-view></div>
             </div>
         </div>
     </body>
