--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,12 +1,16 @@
-<section id="contact">
-    <div class="container">
+<!DOCTYPE html>
+<html lang="en" ng-app="webpage">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h3>Email:</h3>
-                <h4>anthony.classon@gmail.com
-                    classon.a@husky.neu.edu
-                </h4>
+            <div class="row-fluid">
+                <div class="col-lg-10 col-lg-3 col-lg-6">
+                    <h3>Email:</h3>
+                    <h4>anthony.classon@gmail.com
+                        classon.a@husky.neu.edu
+                    </h4>
+                </div>
             </div>
         </div>
     </div>
-</section>
+</html>
+
