--- a/index.html
+++ b/index.html
@@ -22,11 +22,16 @@
         <script src="./app.js"></script>
         <script src="./config.js"></script>
         
+        <style>
+            .vert-offset-top-12{
+                margin-top: 12em;
+            }
+        </style>
     </head>
     <body>
         <div class="container-fluid">
             <div ng-include="'./pages/header.html'"></div>
-            <div class="row">
+            <div class="vert-offset-top-12">
                 <div ng-view></div>
             </div>
         </div>
