--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,18 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
 <div class="container-fluid">
-    <div class="row">
-			<div class="offset3">
-                <h4>Updated: December 2014</h4>
-            </div>
-            <div class="offset3">
-                <h3>Education</h3>
-            </div>
-            <div class="offset3">
-                <h3>Experience</h3>
-            </div>
-            <div class="offset3">
-                <h3>Volunteering and Community Involvement</h3>
-            </div>
+    <div class="row-fluid">
+        <div class="col-lg-9">
+            <h4>Updated: December 2014</h4>
+        </div>
+        <div class="offset3">
+            <h3>Education</h3>
+        </div>
+        <div class="offset3">
+            <h3>Experience</h3>
+        </div>
+        <div class="offset3">
+            <h3>Volunteering and Community Involvement</h3>
+        </div>
     </div>
-</html>
+</div>
