--- a/pages/about.html
+++ b/pages/about.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html>
-<html lang="en" ng-app="webpage">
-    <div class="container-fluid">
-        <h1>About</h1>
-        <p>Hello and welcome to my homepage. My name is Anthony Classon and I am currently a masters student at Northeastern University in Boston, MA.</p>
+<div class="container-fluid">
+    <div class="row-fluid">
+        <div class="col-lg-9">
+            <h1>About</h1>
+            <p>Hello and welcome to my homepage. My name is Anthony Classon and I am currently a masters student at Northeastern University in Boston, MA.</p>
+        </div>
     </div>
-</html>
+</div>
+
 
