--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,10 +1,9 @@
 <div class="container-fluid">
     <div class="row-fluid">
         <div class="col-lg-9">
-            <h3>Email:</h3>
-            <h4>anthony.classon@gmail.com
-                classon.a@husky.neu.edu
-            </h4>
+            <h5>Email:</h5>
+            <h6>anthony.classon@gmail.com</h6>
+            <h6>classon.a@husky.neu.edu</h6>
         </div>
     </div>
 </div>
