--- a/pages/about.html
+++ b/pages/about.html
@@ -1,7 +1,8 @@
 <div class="container-fluid">
     <div class="row-fluid">
         <div class="col-lg-9">
-            <p>Hello and welcome to my homepage. My name is Anthony Classon and I am currently a masters student at Northeastern University in Boston, MA.</p>
+            <p>     Hello and welcome to my homepage. My name is Anthony Classon and I am currently a masters student at Northeastern University in Boston, MA.</p>
+            <p>     I grew up in Melbourne, Australia, before moving to the US at the age of 16.</p>
         </div>
     </div>
 </div>
