--- a/pages/coursework.html
+++ b/pages/coursework.html
@@ -9,16 +9,26 @@
                 <p>Surveys programming techniques using examples and exercises from bioinformatics. Python is the main programming language used, and the course ends with a brief introduction to Perl. Topics include string operations, file manipulations, regular expressions, object-oriented programming, database access, and an introduction to the BioPython/BioPerl libraries. 
                 </p>
                 <li>Bioinformatics Computational Methods I and II</li>
+                <p>Teaches practical skills necessary to manage and mine the vast biological information being generated and housed in public databases. Emphasizes the use of Perl as the primary computer language and requires students to learn and understand basic computer logic and syntax, including an introduction to scalars, arrays, hashes, decision statements, loops, subroutines, references, and regular expressions.
+                </p>
                 <li>Bioinformatics Seminar</li>
+                <p>Discusses current issues and research topics in bioinformatics.
+                </p>
                 <li>Statistics for Bioinformatics</li>
                 <p>Introduces the concepts of probability and statistics and the statistical concepts used in genomics (sequence alignment algorithms, mapping gene, and protein stochastic networks) and in drug discovery and evaluation. Methods include theoretical approaches such as maximum likelihood, entropy maximization, minimal description length, and empirical methods based on clustering, pattern recognition, bootstrapping, neural networks, Markov chain Monte Carlo, fitting Markov models of local interactions, and Bayesian models. Discusses application examples of discriminant analysis, principal components, multiple correlation, regression, and design of experiments to bioinformatics.
                 </p>
                 <li>Biochemistry</li>
+                <p>Studies the structure and function of biomolecules, with an emphasis on proteins; enzyme catalysis; and cellular metabolism, with an emphasis on bioenergetics and carbohydrate/lipid. 
+                </p>
                 <li>Ethics in Biological Research</li>
                 <p>Discusses ethical issues relevant to research in the biological sciences.
                 </p>
                 <li>Web Development</li>
+                <p>Discusses Web development for sites that are dynamic, data driven, and interactive. Focuses on the software development issues of integrating multiple languages, assorted data technologies, and Web interaction. Considers ASP.NET, C#, HTTP, HTML, CSS, XML, XSLT, JavaScript, AJAX, RSS/Atom, SQL, and Web services.
+                </p>
                 <li>Collecting, Storing, and Retrieving Data</li>
+                <p>In this course students will learn how to build large-scale information repositories of different types of information objects so that they can be selected, retrieved, and transformed for analytics and discovery, including statistical analysis. Students will become knowledgeable about traditional approaches to data storage and how they can be applied alongside modern approaches that use non-relational or NoSQL architectures. Through case studies, readings on background theory, and hands-on experimentation, students will have the opportunity to learn how to select, plan, and implement storage, search and retrieval components of large-scale structured and unstructured information repositories. In particular, students will be conversant in the tools and techniques used to assess and recommend efficient and effective large-scale information storage and retrieval components that provide data scientists with properly structured, accurate, and reliable access to information needed for investigation.
+                </p>
             </ul>
         </div>
     </div>
