--- a/pages/home.html
+++ b/pages/home.html
@@ -1,7 +1,13 @@
-<iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fadclasson&color=orange_white&size=64" style="width: 64px; height: 64px;"></iframe>
-<a class="btn btn-social-icon btn-github">
-    <span class="fa fa-github"></span>
-</a>
-<a class="btn btn-social-icon btn-linkedin">
-    <span class="fa fa-linkedin"></span>
-</a>
+<div class="text-center">
+    <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fadclasson&color=orange_white&size=64" style="width: 64px; height: 64px;"></iframe>
+    <li>
+        <a class="btn btn-social-icon btn-linkedin">
+            <span class="fa fa-linkedin"></span>
+        </a>
+    </li>
+    <li>
+        <a class="btn btn-social-icon btn-github">
+            <span class="fa fa-github"></span>
+        </a>
+    </li>
+</div>
