--- a/pages/home.html
+++ b/pages/home.html
@@ -1,4 +1,4 @@
-<div class="text-center">
+<div class="container">
     <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fadclasson&color=orange_white&size=64" style="width: 64px; height: 64px;"></iframe>
     
     <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
