--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,8 +2,12 @@
     <div class="row-fluid">
         <div class="col-lg-9">
             <h4>Email:</h4>
-            <h5>anthony.classon@gmail.com</h5>
-            <h5>classon.a@husky.neu.edu</h5>
+            <a href="mailto:anthony.classon@gmail.com">
+                <h5>anthony.classon@gmail.com</h5>
+            </a>
+            <a href="mailto:classon.a@husky.neu.edu">
+                <h5>classon.a@husky.neu.edu</h5>
+            </a>
         </div>
     </div>
 </div>
