--- a/pages/home.html
+++ b/pages/home.html
@@ -1,24 +1,36 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="text-center">
-            <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fadclasson&color=orange_white&size=64" style="width: 64px; height: 64px;"></iframe>
-        </div>
-    </div>
-</div>
-<div class="container-fluid">
-    <div class="row">
-        <div class="text-center">
-            <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-            <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/anthonyclasson" data-format="click" data-text="Anthony Classon"></script>
-        </div>
-    </div>
-</div>
-<div class="container-fluid">
-    <div class="row">
-        <div class="text-center">
-            <a href="https://twitter.com/anthonyclasson" class="twitter-follow-button" data-show-count="false" data-size="large" data-dnt="true"></a>
-            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-        </div>
-    </div>
-</div>
-
+<div id="content">
+    <ul>
+      <li>
+      <div>
+        <a href="https://github.com/anthonyclasson"><img src= "http://talks.edunham.net/seagl2014/thinkingingit/_images/github.png"></a>
+      </div>
+      <div>
+        <a href="https://github.com/anthonyclasson">GitHub</a>
+      </div>
+      </li>
+      <li>
+      <div>
+        <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fadclasson&color=orange_white&size=64" style="width: 64px; height: 64px;"></iframe>
+      </div>
+      <div>
+        <a href="https://soundcloud.com/adclasson">Soundcloud</a>
+      </div>
+      </li>
+      <li>
+      <div>
+        <a href="https://www.linkedin.com/in/anthonyclasson"><img src= "http://kristenshirkey.appspot.com/static/images/socialmedia_icons/linkedin.png"></a>
+      </div>
+      <div>
+        <a href="https://www.linkedin.com/in/anthonyclasson">LinkedIn</a>
+      </div>
+      </li>
+      <li>
+      <div>
+        <a href="https://twitter.com/anthonyclasson"><img src= "https://cdn1.iconfinder.com/data/icons/new_twitter_icon/491/bird_twitter_new_single.png"></a>
+      </div>
+      <div>
+        <a href="https://twitter.com/anthonyclasson">Twitter</a>
+      </div>
+      </li>
+      </ul>
+  </div>
