fix social media buttons

--- a/pages/home.html
+++ b/pages/home.html
@@ -2,7 +2,7 @@
     <ul>
       <li>
       <div>
-        <a href="https://github.com/anthonyclasson"><img src= "http://talks.edunham.net/seagl2014/thinkingingit/_images/github.png"></a>
+        <a href="https://github.com/anthonyclasson"><img src= "http://talks.edunham.net/seagl2014/thinkingingit/_images/github.png" width="40px" height="40px" border-radius="7px"></a>
       </div>
       <div>
         <a href="https://github.com/anthonyclasson">GitHub</a>
@@ -18,7 +18,7 @@
       </li>
       <li>
       <div>
-        <a href="https://www.linkedin.com/in/anthonyclasson"><img src= "http://kristenshirkey.appspot.com/static/images/socialmedia_icons/linkedin.png"></a>
+        <a href="https://www.linkedin.com/in/anthonyclasson"><img src= "http://kristenshirkey.appspot.com/static/images/socialmedia_icons/linkedin.png" width="40px" height="40px" border-radius="7px"></a>
       </div>
       <div>
         <a href="https://www.linkedin.com/in/anthonyclasson">LinkedIn</a>
@@ -26,7 +26,7 @@
       </li>
       <li>
       <div>
-        <a href="https://twitter.com/anthonyclasson"><img src= "https://cdn1.iconfinder.com/data/icons/new_twitter_icon/491/bird_twitter_new_single.png"></a>
+        <a href="https://twitter.com/anthonyclasson"><img src= "https://cdn1.iconfinder.com/data/icons/new_twitter_icon/491/bird_twitter_new_single.png" width="40px" height="40px" border-radius="7px"></a>
       </div>
       <div>
         <a href="https://twitter.com/anthonyclasson">Twitter</a>
