--- a/pages/home.html
+++ b/pages/home.html
@@ -2,7 +2,7 @@
     <ul>
       <li>
       <div>
-        <a href="https://github.com/anthonyclasson"><img src= "http://talks.edunham.net/seagl2014/thinkingingit/_images/github.png" width="40px" height="40px" border-radius="7px"></a>
+        <a href="https://github.com/anthonyclasson"><img src= "http://talks.edunham.net/seagl2014/thinkingingit/_images/github.png" style="width:64px;height:64px;border-radius:7px;"></a>
       </div>
       <div>
         <a href="https://github.com/anthonyclasson">GitHub</a>
@@ -10,7 +10,7 @@
       </li>
       <li>
       <div>
-        <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fadclasson&color=orange_white&size=64" style="width: 64px; height: 64px;"></iframe>
+        <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fadclasson&color=orange_white&size=64" style="width: 64px; height: 64px; border-radius:7px;"></iframe>
       </div>
       <div>
         <a href="https://soundcloud.com/adclasson">Soundcloud</a>
@@ -18,7 +18,7 @@
       </li>
       <li>
       <div>
-        <a href="https://www.linkedin.com/in/anthonyclasson"><img src= "http://kristenshirkey.appspot.com/static/images/socialmedia_icons/linkedin.png" width="40px" height="40px" border-radius="7px"></a>
+        <a href="https://www.linkedin.com/in/anthonyclasson"><img src= "http://kristenshirkey.appspot.com/static/images/socialmedia_icons/linkedin.png" style="width:64px;height:64px;border-radius:7px;"></a>
       </div>
       <div>
         <a href="https://www.linkedin.com/in/anthonyclasson">LinkedIn</a>
@@ -26,7 +26,7 @@
       </li>
       <li>
       <div>
-        <a href="https://twitter.com/anthonyclasson"><img src= "https://cdn1.iconfinder.com/data/icons/new_twitter_icon/491/bird_twitter_new_single.png" width="40px" height="40px" border-radius="7px"></a>
+        <a href="https://twitter.com/anthonyclasson"><img src= "https://cdn1.iconfinder.com/data/icons/new_twitter_icon/491/bird_twitter_new_single.png" style="width:64px;height:64px;border-radius:7px;"></a>
       </div>
       <div>
         <a href="https://twitter.com/anthonyclasson">Twitter</a>
