fix social media buttons

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,5 @@
-<div style = "text-align:center">
-    <ul list-style-type="none">
+<div class ="row" style="text-align:center">
+    <ul style="list-style-type:none">
       <li>
       <div>
         <a href="https://github.com/anthonyclasson"><img src= "http://talks.edunham.net/seagl2014/thinkingingit/_images/github.png" style="width:64px;height:64px;border-radius:7px;"></a>
