--- a/pages/home.html
+++ b/pages/home.html
@@ -1,6 +1,6 @@
 <div class ="row" style="text-align:center">
     <ul style="list-style-type:none">
-      <li style = "display: inline-block;padding-right: 10px">
+      <li style = "display: inline-block">
       <div>
         <a href="https://github.com/anthonyclasson"><img src= "http://talks.edunham.net/seagl2014/thinkingingit/_images/github.png" style="width:64px;height:64px;border-radius:7px;"></a>
       </div>
@@ -8,7 +8,7 @@
         <a href="https://github.com/anthonyclasson">GitHub</a>
       </div>
       </li >
-      <li style = "display: inline-block;padding-right: 10px">
+      <li style = "display: inline-block">
       <div>
         <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fadclasson&color=orange_white&size=64" style="width: 64px; height: 64px; border-radius:7px;"></iframe>
       </div>
@@ -16,7 +16,7 @@
         <a href="https://soundcloud.com/adclasson">Soundcloud</a>
       </div>
       </li>
-      <li style = "display: inline-block;padding-right: 10px">
+      <li style = "display: inline-block">
       <div>
         <a href="https://www.linkedin.com/in/anthonyclasson"><img src= "http://kristenshirkey.appspot.com/static/images/socialmedia_icons/linkedin.png" style="width:64px;height:64px;border-radius:7px;"></a>
       </div>
@@ -24,7 +24,7 @@
         <a href="https://www.linkedin.com/in/anthonyclasson">LinkedIn</a>
       </div>
       </li>
-      <li style = "display: inline-block;padding-right: 10px">
+      <li style = "display: inline-block">
       <div>
         <a href="https://twitter.com/anthonyclasson"><img src= "https://cdn1.iconfinder.com/data/icons/new_twitter_icon/491/bird_twitter_new_single.png" style="width:64px;height:64px;border-radius:7px;"></a>
       </div>
