--- a/pages/header.html
+++ b/pages/header.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">    
-    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+    <nav id="mainNav" class="navbar navbar-default navbar-static-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand page-scroll" href="#/home">Anthony Classon</a>
