--- a/pages/home.html
+++ b/pages/home.html
@@ -1,7 +1,7 @@
 <div class ="row" style="text-align:center">
     <div class="container-fluid">
     <div class="row-fluid">
-            <div class="col-lg-9">
+            <div class="col-lg-10 col-lg-offset-1">
                 <p>     Hello and welcome to my homepage. My name is Anthony Classon and I am currently a masters student at Northeastern University in Boston, MA.
                         I completed my undergraduate degree at Boston University in 2014 where I double majored in Biology and Mathematics. 
                 </p>
@@ -12,38 +12,40 @@
             </div>
         </div>
     </div>
-    <ul style="list-style-type:none">
-      <li style = "display: inline-block">
-        <div>
-            <a href="https://github.com/anthonyclasson"><img src= "http://talks.edunham.net/seagl2014/thinkingingit/_images/github.png" style="width:64px;height:64px;border-radius:7px;"></a>
-        </div>
-        <div>
-            <a href="https://github.com/anthonyclasson">GitHub</a>
-        </div>
-      </li >
-      <li style = "display: inline-block">
-        <div>
-            <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fadclasson&color=orange_white&size=64" style="width: 64px; height: 64px; border-radius:7px;"></iframe>
-        </div>
-        <div>
-            <a href="https://soundcloud.com/adclasson">Soundcloud</a>
-        </div>
-      </li>
-      <li style = "display: inline-block">
-        <div>
-            <a href="https://www.linkedin.com/in/anthonyclasson"><img src= "http://kristenshirkey.appspot.com/static/images/socialmedia_icons/linkedin.png" style="width:64px;height:64px;border-radius:7px;"></a>
-        </div>
-        <div>
-            <a href="https://www.linkedin.com/in/anthonyclasson">LinkedIn</a>
-        </div>
-      </li>
-      <li style = "display: inline-block">
-        <div>
-            <a href="https://twitter.com/anthonyclasson"><img src= "https://cdn1.iconfinder.com/data/icons/new_twitter_icon/491/bird_twitter_new_single.png" style="width:64px;height:64px;border-radius:7px;"></a>
-        </div>
-        <div>
-            <a href="https://twitter.com/anthonyclasson">Twitter</a>
-        </div>
-      </li>
-    </ul>
+    <div class="row-fluid">
+        <ul style="list-style-type:none">
+        <li style = "display: inline-block">
+            <div>
+                <a href="https://github.com/anthonyclasson"><img src= "http://talks.edunham.net/seagl2014/thinkingingit/_images/github.png" style="width:64px;height:64px;border-radius:7px;"></a>
+            </div>
+            <div>
+                <a href="https://github.com/anthonyclasson">GitHub</a>
+            </div>
+        </li >
+        <li style = "display: inline-block">
+            <div>
+                <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fadclasson&color=orange_white&size=64" style="width: 64px; height: 64px; border-radius:7px;"></iframe>
+            </div>
+            <div>
+                <a href="https://soundcloud.com/adclasson">Soundcloud</a>
+            </div>
+        </li>
+        <li style = "display: inline-block">
+            <div>
+                <a href="https://www.linkedin.com/in/anthonyclasson"><img src= "http://kristenshirkey.appspot.com/static/images/socialmedia_icons/linkedin.png" style="width:64px;height:64px;border-radius:7px;"></a>
+            </div>
+            <div>
+                <a href="https://www.linkedin.com/in/anthonyclasson">LinkedIn</a>
+            </div>
+        </li>
+        <li style = "display: inline-block">
+            <div>
+                <a href="https://twitter.com/anthonyclasson"><img src= "https://cdn1.iconfinder.com/data/icons/new_twitter_icon/491/bird_twitter_new_single.png" style="width:64px;height:64px;border-radius:7px;"></a>
+            </div>
+            <div>
+                <a href="https://twitter.com/anthonyclasson">Twitter</a>
+            </div>
+        </li>
+        </ul>
+    </div>
 </div>
