--- a/pages/home.html
+++ b/pages/home.html
@@ -1,7 +1,7 @@
 <div class ="row" style="text-align:center">
     <div class="container-fluid">
     <div class="row-fluid">
-            <div class="col-lg-10 col-lg-offset-1">
+            <div class="col-lg-offset-1 col-lg-10">
                 <p>     Hello and welcome to my homepage. My name is Anthony Classon and I am currently a masters student at Northeastern University in Boston, MA.
                         I completed my undergraduate degree at Boston University in 2014 where I double majored in Biology and Mathematics. 
                 </p>
