--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <title>Anthony Classon</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../startbootstrap-stylish-portfolio-1.0.5/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="../startbootstrap-stylish-portfolio-1.0.5/css/stylish-portfolio.css" rel="stylesheet">
+    <link href="css/stylish-portfolio.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="../startbootstrap-stylish-portfolio-1.0.5/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -256,10 +256,10 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="../startbootstrap-stylish-portfolio-1.0.5/js/jquery.js"></script>
+    <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="../startbootstrap-stylish-portfolio-1.0.5/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
     <script>
