--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
                         <li>
                             <a href="https://github.com/anthonyclasson"><i class="fa fa-github fa-fw fa-3x"></i></a>
                         </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/anthonyclasson"><i class="fa fa-linkedin-square fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://soundcloud.com/adclasson"><i class="fa fa-soundcloud fa-fw fa-3x"></i></a>
+                        </li>
                     </ul>
                     <hr class="small">
                     <p class="text-muted">Copyright &copy; Anthony Classon 2016</p>
